# number-recognition-neural-network

./: .gitignore  README.md  main.py  pyproject.toml
dokumentaatio/: Määrittelydokumentti.md  Testausdokumentti.md  Toteutusdokumentti.md  Viikkoraportti_1.md  Viikkoraportti_2.md  Viikkoraportti_4.md  Viikkoraportti_6.md
files/: accuracy92.19.npz  accuracy92.26.npz  accuracy93.82.npz  accuracy93.98.npz  accuracy94.2.npz  accuracy94.68.npz
src/: data_loader.py  gui.py  mnist_data_handler.py  model.py
src/tests/: model_test.py
