[tool.poetry]
name = "number-recognition-neural-network"
version = "0.1.0"
description = ""
authors = ["ellenra <ellen.rajala@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
